--- a/src/global.scss
+++ b/src/global.scss
@@ -1129,7 +1129,7 @@ ion-header {
                     }
                 }
 
-                &.tobereceivesd {
+                &.tobereceived {
                     padding-left  : 33px;
                     padding-top   : 32px;
                     padding-bottom: 32px;
