--- a/src/app/pages/auth/register/register.component.html
+++ b/src/app/pages/auth/register/register.component.html
@@ -20,7 +20,7 @@
         <ion-card mode="ios">
             <ion-card-content>
                 <ion-list lines="none">
-                    <form (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm">
+                    <form (ngSubmit)="f.form.valid && user.password == user.confirmPassword && onSubmit()" #f="ngForm">
                         <ion-list-header>Sign Up</ion-list-header>
 
                         <ion-item>
@@ -28,7 +28,7 @@
                                 #userName="ngModel" required></ion-input>
                         </ion-item>
 
-                        <div>
+                        <div class="error">
                             <label *ngIf="f.submitted && userName.invalid">
                                 Please Enter User Name
                             </label>
@@ -40,7 +40,7 @@
                         </ion-item>
 
 
-                        <div>
+                        <div class="error">
                             <label *ngIf="f.submitted && email.invalid">
                                 Please Enter Email
                             </label>
@@ -51,22 +51,28 @@
                                 name="password" #password="ngModel" required></ion-input>
                         </ion-item>
 
-                        <div>
+                        <div class="error">
                             <label *ngIf="f.submitted && password.invalid">
                                 Please Enter Password
                             </label>
                         </div>
 
-                        <!-- <ion-item>
+                        <ion-item>
                             <ion-input placeholder="Confirm Password" type="password" [(ngModel)]="user.confirmPassword"
                                 name="confirmPassword" #confirmPassword="ngModel" required></ion-input>
                         </ion-item>
 
-                        <div>
+                        <div class="error">
                             <label *ngIf="f.submitted && confirmPassword.invalid">
                                 Please Enter Confirm Password
                             </label>
-                        </div> -->
+                        </div>
+
+                        <div *ngIf="confirmPassword.valid && user.password != user.confirmPassword">
+                            <span class="error">
+                                Password and confirm password must be same!!
+                            </span>
+                        </div>
 
                         <!-- <div class="remember-forgot">
                             <div class="checkbox">
