--- a/src/app/pages/view-grunt/view-grunt.component.html
+++ b/src/app/pages/view-grunt/view-grunt.component.html
@@ -1,8 +1,8 @@
 <ion-header no-border mode="md" class="modal-header-funds">
   <ion-toolbar mode="md">
     <div class="detailed-header-title">
-      <h2>{{grantData.grantName}}</h2>
-      <p>{{grantData.grantLink}}</p>
+      <h2>{{grant?.grantName}}</h2>
+      <p>{{grant?.grantLink}}</p>
     </div>
     <ion-buttons slot="end">
       <ion-button (click)="dismiss()" color="medium">
@@ -15,14 +15,15 @@
     <ion-item lines="none">
       <div class="users-container">
         <div class="users">
-          <img *ngFor="let user of grantData.grantees" src="{{SERVER_URL}}/{{user.picture}}" alt="">
-        </div> <a href="">View All</a>
+          <img *ngFor="let user of grant?.donors | slice:0:4;" src="{{user?.picture}}" alt="">
+        </div>
+        <a *ngIf="grant?.donors.length > 4" href="">View All</a>
       </div>
 
       <div slot="end" class="cost-details">
         <div class="cost">
-          <h3>$ {{grantData.totalFund}}</h3>
-          <p>OUT OF ${{grantData.grantAmount}}</p>
+          <h3>$ {{grant?.totalFund}}</h3>
+          <p>OUT OF ${{grant?.grantAmount}}</p>
         </div>
 
       </div>
@@ -31,26 +32,48 @@
 </ion-header>
 
 <ion-content>
-  <div class="delivery-date-milestone">
-    <div class="time-of-deliver">
-      <h4>Delivery Date</h4>
-      <p>02.02.2019</p>
+  <div *ngIf="multipleMilestones">
+    <div class="delivery-date-milestone">
+      <ul class="milestone-status">
+        <li class="{{item?.status}}" *ngFor="let item of grant?.multipleMilestones">
+          <span class="status"><i class="gp-check-circle"></i></span>
+          <ion-item lines="none">
+            <ion-label>
+              <p>Milestone {{item.milestoneNumber}}</p>
+              <h3>{{item.completionDate}}</h3>
+            </ion-label>
+            <ion-label text-right class="cost" slot="end">
+              <h3>$ {{item.funding}}</h3>
+              <p>OUT OF $ {{grant?.grantAmount}}</p>
+            </ion-label>
+          </ion-item>
+        </li>
+      </ul>
     </div>
-    <ul class="milestone-status">
-      <li class="{{item.status}}" *ngFor="let item of items">
-        <span class="status"><i class="gp-check-circle"></i></span>
-        <ion-item lines="none">
-          <ion-label>
-            <p>{{item.title}}</p>
-            <h3>{{item.date}}</h3>
-          </ion-label>
-          <ion-label text-right class="cost" slot="end">
-            <h3>$ {{item.cost}}</h3>
-            <p>OUT OF $ {{item.totalcost}}</p>
-          </ion-label>
-        </ion-item>
-      </li>
-    </ul>
+  </div>
+
+  <div *ngIf="!multipleMilestones">
+    <div class="delivery-date-milestone">
+      <div class="time-of-deliver">
+        <h4>Delivery Date</h4>
+        <p>{{grant?.singleDeliveryDate.fundingExpiryDate}}</p>
+      </div>
+      <ul class="milestone-status">
+        <li class="{{grant?.singleDeliveryDate.status}}">
+          <span class="status"><i class="gp-check-circle"></i></span>
+          <ion-item lines="none">
+            <ion-label>
+              <p>Completion Date</p>
+              <h3>{{grant?.singleDeliveryDate.completionDate}}</h3>
+            </ion-label>
+            <ion-label text-right class="cost" slot="end">
+              <h3>$ {{grant?.singleDeliveryDate.funding}}</h3>
+              <p>OUT OF $ {{grant?.grantAmount}}</p>
+            </ion-label>
+          </ion-item>
+        </li>
+      </ul>
+    </div>
   </div>
 
   <hr>
