--- a/src/app/pages/latest-grants/latest-grants.component.html
+++ b/src/app/pages/latest-grants/latest-grants.component.html
@@ -45,8 +45,8 @@
             <li class="cost-details">
               <ion-item mode="md" lines="none">
                 <ion-label text-right>
-                  <h3>$ {{lg.fund}}</h3>
-                  <p>OUT OF $ {{lg.grantAmount}}</p>
+                  <h3>$ {{lg.totalFunding}}</h3>
+                  <p>OUT OF $ {{lg.targetFunding}}</p>
 
                   <ion-button class="details" mode="md" slot="end" (click)="viewGrunt(lg)">See</ion-button>
                   <ion-button class="details" mode="md" slot="end" (click)="grantDetails(lg._id)">Details
