--- a/src/app/pages/my-grants/my-grants.component.html
+++ b/src/app/pages/my-grants/my-grants.component.html
@@ -61,7 +61,8 @@
                 <img *ngFor="let user of fund.donors | slice:0:4" [src]="user?.picture || ''" alt="">
               </div>
             </div>
-            <ion-button class="details" mode="md" slot="end" (click)="viewGrunt(fund)">See Details</ion-button>
+            <ion-button class="details" mode="md" slot="end" (click)="viewGrunt(fund)">See</ion-button>
+            <ion-button class="details" mode="md" slot="end" (click)="grantDetails(fund._id)">Details</ion-button>
           </ion-item>
         </ion-card-content>
       </ion-card>
@@ -119,8 +120,8 @@
                 <img *ngFor="let user of manage.donors | slice:0:4" [src]="user?.picture || ''" alt="">
               </div>
             </div>
-            <ion-button class="details" mode="md" slot="end" (click)="viewGrunt(manage)">See Details
-            </ion-button>
+            <ion-button class="details" mode="md" slot="end" (click)="viewGrunt(manage)">See </ion-button>
+            <ion-button class="details" mode="md" slot="end" (click)="grantDetails(manage._id)">Details</ion-button>
           </ion-item>
         </ion-card-content>
       </ion-card>
