--- a/src/app/pages/amounts-receive/amounts-receive.component.html
+++ b/src/app/pages/amounts-receive/amounts-receive.component.html
@@ -1,35 +1,35 @@
-<!-- <ion-header no-border mode="md" class="modal-header-funds">
-    <ion-toolbar mode="md">
-      <div class="detailed-header-title">
-        <h2>Untitled Grant</h2>
-        <p>https://grantlink.com</p>
+<ion-header no-border mode="md" class="modal-header-funds">
+  <ion-toolbar mode="md">
+    <div class="detailed-header-title">
+      <h2>Untitled Grant</h2>
+      <p>https://grantlink.com</p>
+    </div>
+    <ion-buttons slot="end">
+      <ion-button (click)="dismiss()" color="medium">
+        <ion-icon slot="icon-only" class="gp-close"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+  </ion-toolbar>
+  <ion-toolbar no-padding mode="md" class="grant-recepients">
+    <h3>Grant Recepients</h3>
+    <ion-item lines="none">
+      <div class="users-container">
+        <div class="users">
+          <img src="assets/imgs/avatar-02.png" alt="">
+          <img src="assets/imgs/avatar-03.png" alt="">
+          <img src="assets/imgs/avatar-04.png" alt="">
+        </div> <a href="">View All</a>
       </div>
-      <ion-buttons slot="end">
-        <ion-button (click)="dismiss()" color="medium">
-          <ion-icon slot="icon-only" class="gp-close"></ion-icon>
-        </ion-button>
-      </ion-buttons>
-    </ion-toolbar>
-    <ion-toolbar no-padding mode="md" class="grant-recepients">
-      <h3>Grant Recepients</h3>
-      <ion-item lines="none">
-        <div class="users-container">
-          <div class="users">
-            <img src="assets/imgs/avatar-02.png" alt="">
-            <img src="assets/imgs/avatar-03.png" alt="">
-            <img src="assets/imgs/avatar-04.png" alt="">
-          </div> <a href="">View All</a>
+
+      <div slot="end" class="cost-details">
+        <div class="cost">
+          <h3>$ 1,500</h3>
+          <p>OUT OF $5,000</p>
         </div>
-  
-        <div slot="end" class="cost-details">
-          <div class="cost">
-            <h3>$ 1,500</h3>
-            <p>OUT OF $5,000</p>
-          </div>
-        </div>
-      </ion-item>
-    </ion-toolbar>
-  </ion-header>
+      </div>
+    </ion-item>
+  </ion-toolbar>
+</ion-header>
 
 <ion-content>
 
@@ -49,33 +49,4 @@
     </ion-list>
   </div>
 
-</ion-content> -->
-
-<app-header></app-header>
-
-<ion-content color="light">
-  <ion-row class="page-row">
-    <!-- <ion-col size="12">
-      <ion-item mode="md" lines="none" class="heading">
-        <ion-label>Demo Page</ion-label>
-      </ion-item>
-      <hr class="dassed-line">
-      <ion-row class="ion-justify-content-start">
-        <ion-col size="12">
-          <ion-col size="4">
-            <ion-button (click)="getBalance()">Check Balance</ion-button>
-            <h5>Balance : {{balance}}</h5>
-          </ion-col>
-        </ion-col>
-        <ion-col size="12">
-          <ion-col size="4">
-            <ion-button (click)="setValue()">Increase Count</ion-button>
-            <h5>Current Count : {{currentValue}}</h5>
-          </ion-col>
-          <ion-col size="4"></ion-col>
-        </ion-col>
-      </ion-row>
-
-    </ion-col> -->
-  </ion-row>
 </ion-content>
