--- a/src/app/pages/trending-grants/trending-grants.component.html
+++ b/src/app/pages/trending-grants/trending-grants.component.html
@@ -45,7 +45,7 @@
             <li class="cost-details">
               <ion-item mode="md" lines="none">
                 <ion-label text-right>
-                  <h3>$ {{lg.totalFunding}}</h3>
+                  <h3>$ {{lg.totalFunding - lg.totalPayed}}</h3>
                   <p>OUT OF $ {{lg.targetFunding}}</p>
 
                   <ion-button class="details" mode="md" slot="end" (click)="viewGrunt(lg)">See</ion-button>
